--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __STDC_CONSTANT_MACROS")
 if(ANDROID)
     set(ANDROID_PACKAGE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/android_files)
     set(ANDROID_ABIS "armeabi-v7a")
+    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/android_files/version.gradle.in ${CMAKE_BINARY_DIR}/version.gradle)
 endif()
 
 option(QUICK_COMPILER "Use QtQuick compiler to improve performance" TRUE)
@@ -42,7 +43,8 @@ find_package(Taglib REQUIRED)
 if(ANDROID)
     find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS AndroidExtras QuickControls2)
 else()
-    find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS Widgets)
+    find_package(KF5 ${REQUIRED_KF5_VERSION} REQUIRED COMPONENTS DBusAddons)
+    find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS Widgets DBus)
 endif()
 
 find_package(MauiKit REQUIRED)
