--- a/src/org.kde.clip.desktop
+++ b/src/org.kde.clip.desktop
@@ -26,6 +26,7 @@ Name[tr]=Klip
 Name[uk]=Кліп
 Name[x-test]=xxClipxx
 Name[zh_CN]=Clip
+Comment=Play your videos
 TryExec=clip
 Exec=clip %U
 Terminal=false
