--- a/android_files/build.gradle
+++ b/android_files/build.gradle
@@ -20,7 +20,7 @@ def timestamp = (int)(new Date().getTime()/1000)
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
-        compile 'com.android.support:support-v4:25.3.1'
+            implementation "androidx.appcompat:appcompat:1.2.0"
 }
 
 android {
