--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,15 +46,14 @@ else()
     find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS Widgets DBus)
 endif()
 
-find_package(MauiKit REQUIRED)
-find_package(MauiKit REQUIRED COMPONENTS FileBrowsing)
+find_package(MauiKit3 REQUIRED)
+find_package(MauiKit3 REQUIRED COMPONENTS FileBrowsing)
 
 if(QUICK_COMPILER)
     find_package(Qt5QuickCompiler)
     set_package_properties(Qt5QuickCompiler PROPERTIES
         DESCRIPTION "Compile QML at build time"
-        TYPE OPTIONAL
-        )
+        TYPE OPTIONAL)
 endif()
 
 if(UNIX AND NOT APPLE AND NOT ANDROID)
@@ -77,16 +76,14 @@ if(${ECM_SOURCE_UNDER_VERSION_CONTROL})
         COMMAND git rev-parse --abbrev-ref HEAD
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         OUTPUT_VARIABLE GIT_BRANCH
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-        )
+        OUTPUT_STRIP_TRAILING_WHITESPACE)
 
     # Get the latest abbreviated commit hash of the working branch
     execute_process(
         COMMAND git log -1 --format=%h
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         OUTPUT_VARIABLE GIT_COMMIT_HASH
-        OUTPUT_STRIP_TRAILING_WHITESPACE
-        )
+        OUTPUT_STRIP_TRAILING_WHITESPACE)
 
     add_definitions(-DGIT_COMMIT_HASH="${GIT_COMMIT_HASH}")
     add_definitions(-DGIT_BRANCH="${GIT_BRANCH}")
@@ -98,11 +95,9 @@ endif()
 
 ecm_setup_version(${CLIP_VERSION}
     VARIABLE_PREFIX CLIP
-    VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/clip_version.h"
-    )
+    VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/clip_version.h")
 
 add_subdirectory(src)
-
 ki18n_install(po)
 
 if(UNIX AND NOT APPLE AND NOT ANDROID)
