--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(CLIP_VERSION 3.1.0)
+add_compile_definitions(APP_COPYRIGHT_NOTICE="© 2019-2024 Maui Development Team")
+
 project(clip VERSION ${CLIP_VERSION} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
