--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@
 
 cmake_minimum_required(VERSION 3.16)
 
-set(CLIP_VERSION 3.1.1)
+set(CLIP_VERSION 4.0.0)
 add_compile_definitions(APP_COPYRIGHT_NOTICE="© 2019-2024 Maui Development Team")
 
 project(clip VERSION ${CLIP_VERSION} LANGUAGES CXX)
@@ -18,8 +18,10 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(REQUIRED_QT_VERSION 5.14.0)
-set(REQUIRED_KF5_VERSION 5.60)
+set(QT_MAJOR_VERSION 6)
+
+set(REQUIRED_QT_VERSION 6.5.2)
+set(REQUIRED_KF_VERSION 5.240.0)
 
 # Certain versions of FFMPEG need this to be defined
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D __STDC_CONSTANT_MACROS")
@@ -30,33 +32,23 @@ if(ANDROID)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/android_files/version.gradle.in ${CMAKE_BINARY_DIR}/version.gradle)
 endif()
 
-option(QUICK_COMPILER "Use QtQuick compiler to improve performance" TRUE)
-
-find_package(ECM ${REQUIRED_KF5_VERSION} REQUIRED NO_MODULE)
+find_package(ECM ${REQUIRED_KF_VERSION} REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${ECM_MODULE_PATH})
 
-find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS Qml Quick Multimedia)
-find_package(KF5 ${REQUIRED_KF5_VERSION} REQUIRED COMPONENTS I18n CoreAddons)
+find_package(Qt6 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS Qml Quick Multimedia)
+find_package(KF6 ${REQUIRED_KF_VERSION} REQUIRED COMPONENTS I18n CoreAddons)
 
 find_package(FFmpeg COMPONENTS AVCODEC AVFORMAT SWSCALE)
 find_package(Taglib REQUIRED)
 
 if(ANDROID)
-    find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS AndroidExtras QuickControls2)
+    find_package(Qt6 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS AndroidExtras QuickControls2)
 else()
-    find_package(KF5 ${REQUIRED_KF5_VERSION} REQUIRED COMPONENTS DBusAddons)
-    find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS Widgets DBus)
+    find_package(KF6 ${REQUIRED_KF_VERSION} REQUIRED COMPONENTS DBusAddons)
+    find_package(Qt6 ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS Widgets DBus)
 endif()
 
-find_package(MauiKit3 REQUIRED)
-find_package(MauiKit3 REQUIRED COMPONENTS FileBrowsing)
-
-if(QUICK_COMPILER)
-    find_package(Qt5QuickCompiler)
-    set_package_properties(Qt5QuickCompiler PROPERTIES
-        DESCRIPTION "Compile QML at build time"
-        TYPE OPTIONAL)
-endif()
+find_package(MauiKit4 REQUIRED COMPONENTS FileBrowsing)
 
 if(UNIX AND NOT APPLE AND NOT ANDROID)
     include(KDEInstallDirs)
@@ -100,6 +92,7 @@ ecm_setup_version(${CLIP_VERSION}
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/clip_version.h")
 
 add_subdirectory(src)
+
 ki18n_install(po)
 
 if(UNIX AND NOT APPLE AND NOT ANDROID)
