--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ find_package(FFmpeg COMPONENTS REQUIRED AVCODEC AVFORMAT SWSCALE)
 if(ANDROID)
     find_package(taglib 1.4 REQUIRED)
 else()
-    find_package(TagLib 1.4 REQUIRED)
+    find_package(Taglib 1.4 REQUIRED)
 endif()
 if(ANDROID)
     find_package(Qt6 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS QuickControls2)
