--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,9 @@ ecm_setup_version(${CLIP_VERSION}
     VARIABLE_PREFIX CLIP
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/clip_version.h")
 
+qt_policy(SET QTP0001 OLD)
+qt_policy(SET QTP0004 NEW)
+
 add_subdirectory(src)
 
 ki18n_install(po)
